<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marta_launch</name>
  <version>0.0.1</version>
  <description>Contains launch files of MaRTA.</description>
  <maintainer email="miro.voellmy@esa.int">Miro Voellmy</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>gamepad_emulation</exec_depend>
  <exec_depend>gamepad_parser</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>launch_helpers</exec_depend>
  <exec_depend>locomotion_manager</exec_depend>
  <exec_depend>locomotion_mode</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ptu_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rover_config</exec_depend>
  <exec_depend>rover_gazebo_plugins</exec_depend>
  <exec_depend>rover_msgs</exec_depend>
  <exec_depend>rover_simulation</exec_depend>
  <exec_depend>simple_joint_simulation</exec_depend>
  <exec_depend>simple_rover_locomotion</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
